--- a/.github/workflows/secret_passing.yml
+++ b/.github/workflows/secret_passing.yml
@@ -7,6 +7,8 @@ jobs:
     name: Run test passing secret
     runs-on: ubuntu-22.04
     steps:
+      - name: Get code
+        uses: actions/checkout@v3
       - name: Use composite action
         uses: ./.github/actions/secret-consumer
         with:
