Add step section to secret-consumer action
Signed-off-by: Pavel Abramov <uncle.decart@gmail.com>

--- a/.github/actions/secret-consumer/action.yml
+++ b/.github/actions/secret-consumer/action.yml
@@ -8,7 +8,8 @@ inputs:
 
 runs:
   using: 'composite'
-  - name: Print Secret
-    run: |
-      echo "${{ inputs.secret }}"
-    shell: bash
+  steps:
+    - name: Print Secret
+      run: |
+        echo "${{ inputs.secret }}"
+      shell: bash
